# QuantumVaultv2

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CODEX.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THREATMODEL.md
.github/workflows/: ci.yml
boot/win/qv-uefi/: README.md  qv_uefi.c
contrib/passwords/: pwdb_top100000.txt
contrib/selinux/: qv.te
docs/: SYSENC-WIN-Stage1.md  SYSENC-WIN-Stage2.md  TLV_REGISTRY.md  hybrid_pqc.md
driver/win/qvdisk/: qvdisk.c  qvdisk.vcxproj
driver/win/qvflt/: ctx.h  driver.c  keys.h  qvflt.vcxproj
include/qv/: common.h  error.h  errors.h
include/qv/core/: header.h  header_io.h  integrity.h  nonce.h  pqc_hybrid_kdf.h
include/qv/crypto/: aegis.h  aes_gcm.h  ct.h  hkdf.h  hmac_sha256.h  keyfiles.h  pbkdf2.h  provider.h  random.h  sha256.h
include/qv/orchestrator/: constant_time_mount.h  credentials.h  event_bus.h  header_serializer.h  io_util.h  ipc_lock.h  password_policy.h  plugin_abi.h  plugin_manager.h  plugin_verification.h  sealed_key.h  session.h  volume_manager.h
include/qv/platform/: fuse_adapter.h  memory_lock.h  sealed_key_registration.h  volume_filesystem.h  winfsp_adapter.h
include/qv/platform/win/: qvdisk_ioctl.h  qvflt_ioctl.h
include/qv/security/: secure_buffer.h  zeroizer.h
include/qv/storage/: block_device.h  chunk_cache.h  chunk_layout.h  chunk_manager.h  read_ahead.h
include/qv/tlv/: parser.h
plugins/: README.md
plugins/example_crypto/: example_crypto.cpp
plugins/pqc_mlkem/: pqc_mlkem.cpp
plugins/tpm2/: provider.cpp
service/qvsvc/: main.cpp  qvsvc.sln  qvsvc.vcxproj
src/cli/: main.cpp
src/core/: header.cpp  header_io.cpp  integrity.cpp  nonce.cpp  nonce_log.cpp  pqc_hybrid_kdf.cpp
src/crypto/: aegis.cpp  aes_gcm.cpp  hkdf.cpp  hmac_sha256.cpp  keyfiles.cpp  pbkdf2.cpp  provider.cpp  random.cpp  sha256.cpp
src/orchestrator/: constant_time_mount.cpp  credentials.cpp  event_bus.cpp  io_util.cpp  ipc_lock.cpp  password_policy.cpp  plugin_manager.cpp  plugin_verification.cpp  sealed_key.cpp  session.cpp  volume_manager.cpp
src/platform/: fuse_adapter.cpp  memory_lock.cpp  volume_filesystem.cpp  winfsp_adapter.cpp
src/platform/macos/: se.cpp
src/platform/win/: tpm.cpp
src/security/: zeroizer.cpp
src/storage/: block_device.cpp  chunk_cache.cpp  chunk_manager.cpp  read_ahead.cpp
src/tlv/: parser.cpp
tests/: CMakeLists.txt  test_aad.cpp  test_chunk_auth.cpp  test_chunk_manager.cpp  test_concurrent_mount.cpp  test_constant_time_mount.cpp  test_error_handling.cpp  test_header_io.cpp  test_hidden_volume.cpp  test_io_util.cpp  test_memory_lock.cpp  test_nonce.cpp  test_session.cpp  test_volume_rekey.cpp
tests/benchmark/: bench_performance.cpp
tests/fuzz/: fuzz_header_backup.cpp  fuzz_header_parser.cpp
tests/integration/: test_fuse_mount.sh
tools/: check_wiring.py  qv-bootprep-win.cpp  qv-fsck.cpp  qv-header.cpp
